force-app/main/default/objects/Opportunity/fields/CWS_Do_Not_Renew_Existing_Contract__c.field-meta.xml
<CustomField>
    <fullName>CWS_Do_Not_Renew_Existing_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates partner preference to not renew their contract at this time; if this field is checked, the Partner Care group will be notified.</inlineHelpText>
    <label>Do Not Renew Existing Contract</label>
    <type>Checkbox</type>
</CustomField>