force-app/main/default/objects/Opportunity/fields/CWS_Economic_Buyer2__c.field-meta.xml
<CustomField>
    <fullName>CWS_Economic_Buyer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Have we met them yet? Have we aligned with them on project and priority? Have we introduced them to internal CW exec?</inlineHelpText>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>