force-app/main/default/objects/Opportunity/fields/CWS_Economic_Buyer_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Economic_Buyer_Position__c</fullName>
    <inlineHelpText>FUNDING AVAILABLE, SUPPORTS PROJECT, TIMELINE &amp; AMOUNT (+)
NO ACCESS, INSIGHT INTO PRIORITIES, LACK OF FUNDING CONTROL (-)</inlineHelpText>
    <label>Economic Buyer Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>