force-app/main/default/objects/Opportunity/fields/CWS_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Email__c</fullName>
    <inlineHelpText>Captures Opportunity contact&apos;s email.</inlineHelpText>
    <label>Email</label>
    <length>18</length>
    <type>Text</type>
</CustomField>