force-app/main/default/objects/Opportunity/fields/CWS_End_Customer_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_End_Customer_Total_Price__c</fullName>
    <inlineHelpText>Calculates the total End Customer price for all Opportunity Product lines.</inlineHelpText>
    <label>End Customer Total Price</label>
    <summarizedField>OpportunityLineItem.CWS_SFA_End_Customer_Total_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>