force-app/main/default/objects/Opportunity/fields/CWS_End_User_Dependent__c.field-meta.xml
<CustomField>
    <fullName>CWS_End_User_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End User Dependent</label>
    <type>Checkbox</type>
</CustomField>