force-app/main/default/objects/Opportunity/fields/CWS_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exchange_Rate__c</fullName>
    <inlineHelpText>Captures the exchange rate based on the country.</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>