force-app/main/default/objects/Opportunity/fields/CWS_Existing_Min_Commit_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Existing_Min_Commit_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Min Commit Period</label>
    <referenceTo>CWS_BillingPeriod__c</referenceTo>
    <relationshipLabel>Opportunities (Existing Min Commit Period’)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>