force-app/main/default/objects/Opportunity/fields/CWS_Experienced_a_Demo_Trial_Solution__c.field-meta.xml
<CustomField>
    <fullName>CWS_Experienced_a_Demo_Trial_Solution__c</fullName>
    <inlineHelpText>Captures whether the prospect has ever seen a demo or done a trial before, and how familiar they are with CW solutions.</inlineHelpText>
    <label>Experienced a Demo/Trial/Solution?</label>
    <type>TextArea</type>
</CustomField>