force-app/main/default/objects/Opportunity/fields/CWS_Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>CWS_Fast_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Order Management team to bypass sales analysis questions and Opportunity stages in certain streamline quoting scenarios.</inlineHelpText>
    <label>Fast Track</label>
    <type>Checkbox</type>
</CustomField>