force-app/main/default/objects/Opportunity/fields/CWS_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_First_Name__c</fullName>
    <inlineHelpText>Captures Opportunity contact&apos;s first name.</inlineHelpText>
    <label>First Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>