force-app/main/default/objects/Opportunity/fields/CWS_Has_Champion_Used_CW_In_Past__c.field-meta.xml
<CustomField>
    <fullName>CWS_Has_Champion_Used_CW_In_Past__c</fullName>
    <inlineHelpText>Indicates whether the champion has used ConnectWise in the past.</inlineHelpText>
    <label>Has champion used CW in past?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run Rate Sale</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>