force-app/main/default/objects/Opportunity/fields/CWS_Has_Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>CWS_Has_Master_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True = if sold to account has active Master Contract</description>
    <inlineHelpText>True = if sold to account has active Master Contract</inlineHelpText>
    <label>Has Master Contract</label>
    <type>Checkbox</type>
</CustomField>