force-app/main/default/objects/Opportunity/fields/CWS_Have_Verbal_Commitment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Have_Verbal_Commitment__c</fullName>
    <inlineHelpText>Indicates whether verbal commitment was received from the economic buyer that CW is vendor of choice for project.</inlineHelpText>
    <label>Have verbal commitment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>