force-app/main/default/objects/Opportunity/fields/CWS_Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>CWS_Identify_Pain__c</fullName>
    <inlineHelpText>What is causing the pain and/or missed opportunities?
What is the impact of Status Quo?</inlineHelpText>
    <label>Identify Pain</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>