force-app/main/default/objects/Opportunity/fields/CWS_Identify_Pain_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Identify_Pain_Position__c</fullName>
    <inlineHelpText>IS DOCUMENTED, IS FAVORABLE TO US (+)
NOT SIGNIFICANT ENOUGH TO ACT NOW (-)</inlineHelpText>
    <label>Identify Pain Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>