force-app/main/default/objects/Opportunity/fields/CWS_Incorrect_Routing_Counter__c.field-meta.xml
<CustomField>
    <fullName>CWS_Incorrect_Routing_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Incorrect Routing Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>