force-app/main/default/objects/Opportunity/fields/CWS_Incremental_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_Incremental_ACV__c</fullName>
    <inlineHelpText>The ACV of the opportunity</inlineHelpText>
    <label>Incremental ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>