force-app/main/default/objects/Opportunity/fields/CWS_is_Continuum_opp__c.field-meta.xml
<CustomField>
    <fullName>CWS_is_Continuum_opp__c</fullName>
    <formula>IF(AND( NOT(ISBLANK(CWS_Legacy_Opportunity_ID__c)), BEGINS(CWS_Legacy_Opportunity_ID__c, &apos;006&apos;) ,  LEN( CWS_Legacy_Opportunity_ID__c )= 18), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is to identify continuum product</inlineHelpText>
    <label>is Continuum opp?</label>
    <type>Checkbox</type>
</CustomField>