force-app/main/default/objects/Opportunity/fields/CWS_Is_Usage__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_Usage__c</fullName>
    <formula>IF(CWS_Master__c = TRUE, &apos;Usage&apos;, &apos;Not Usage&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Usage?</label>
    <type>Text</type>
</CustomField>