force-app/main/default/objects/Opportunity/fields/CWS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Last_Name__c</fullName>
    <inlineHelpText>Captures Opportunity contact&apos;s last name.</inlineHelpText>
    <label>Last Name`</label>
    <length>10</length>
    <type>Text</type>
</CustomField>