force-app/main/default/objects/Opportunity/fields/CWS_Last_QR_Calculated__c.field-meta.xml
<CustomField>
    <fullName>CWS_Last_QR_Calculated__c</fullName>
    <description>Indicates the latest date of quota retirement calculation</description>
    <inlineHelpText>Indicates the latest date of quota retirement calculation</inlineHelpText>
    <label>Last QR Calculated</label>
    <type>DateTime</type>
</CustomField>