force-app/main/default/objects/Opportunity/fields/CWS_Lead_Source_Details_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Source_Details_Most_Recent__c</fullName>
    <label>Lead Source Details - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>