force-app/main/default/objects/Opportunity/fields/CWS_Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Source_Most_Recent__c</fullName>
    <inlineHelpText>Captures the most recent Lead Source for this Opportunity.</inlineHelpText>
    <label>Lead Source Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Channel Generated</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Distributor Recruitment</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Events Hosted</fullName>
            </value>
            <value>
                <fullName>Events Sponsored</fullName>
            </value>
            <value>
                <fullName>List-Based Ads</fullName>
            </value>
            <value>
                <fullName>Marketing Generated</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Remarketing</fullName>
            </value>
            <value>
                <fullName>Review Site</fullName>
            </value>
            <value>
                <fullName>Sales Campaigns</fullName>
            </value>
            <value>
                <fullName>Sales Generated</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Web Direct</fullName>
            </value>
            <value>
                <fullName>Web Referral</fullName>
            </value>
            <value>
                <fullName>.</fullName>
                <isActive>false</isActive>
                <label>.</label>
            </value>
            <value>
                <fullName>Advic Test</fullName>
                <isActive>false</isActive>
                <label>Advic Test</label>
            </value>
            <value>
                <fullName>Ara Mecua</fullName>
                <isActive>false</isActive>
                <label>Ara Mecua</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>