force-app/main/default/objects/Opportunity/fields/CWS_Legacy_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Campaign_ID__c</fullName>
    <description>Captures historical campaign name for this Opportunity.</description>
    <inlineHelpText>Captures historical campaign name for this Opportunity.</inlineHelpText>
    <label>Legacy Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>