force-app/main/default/objects/Opportunity/fields/CWS_Legacy_Deal_Notes__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Deal_Notes__c</fullName>
    <inlineHelpText>Captures legacy deal notes for this Opportunity.</inlineHelpText>
    <label>Legacy Deal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>