force-app/main/default/objects/Opportunity/fields/CWS_Legacy_MNG__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_MNG__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the Opportunity&apos;s legacy ConnectWise Manage Account ID.</inlineHelpText>
    <label>Legacy MNG Account ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>