force-app/main/default/objects/Opportunity/fields/CWS_Legacy_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Opportunity_ID__c</fullName>
    <description>Used for the legacy opportunity data</description>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the Opportunity&apos;s legacy ID.</inlineHelpText>
    <label>Legacy Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>