force-app/main/default/objects/Opportunity/fields/CWS_Legacy_Salesforce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Salesforce_Account_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the Opportunity&apos;s legacy Continuum Salesforce Account ID.</inlineHelpText>
    <label>Legacy Salesforce Account ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>