force-app/main/default/objects/Opportunity/fields/CWS_LegacyAgreementId__c.field-meta.xml
<CustomField>
    <fullName>CWS_LegacyAgreementId__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.CWS_Legacy_Agreement_ID__c</formula>
    <label>Legacy Agreement Id</label>
    <type>Text</type>
</CustomField>