force-app/main/default/objects/Opportunity/fields/CWS_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legal_Entity__c</fullName>
    <inlineHelpText>Indicates the Legal Entity for this Opportunity based on the Bill To Account country.</inlineHelpText>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CW-AU</fullName>
                <label>ConnectWise Australia PTY LTD</label>
            </value>
            <value>
                <fullName>CW-CAD</fullName>
                <label>ConnectWise Canada Company</label>
            </value>
            <value>
                <fullName>CW-IN</fullName>
            </value>
            <value>
                <fullName>CW-UK</fullName>
                <label>ConnectWise LTD</label>
            </value>
            <value>
                <fullName>CW-US</fullName>
                <label>ConnectWise, LLC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>