force-app/main/default/objects/Opportunity/fields/CWS_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lost_Reason__c</fullName>
    <inlineHelpText>Captures the reason for losing this Opportunity.</inlineHelpText>
    <label>Lost Reason(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unresponsive / No Decision</fullName>
            </value>
            <value>
                <fullName>Pricing / No Budget Competition</fullName>
            </value>
            <value>
                <fullName>Competition Price</fullName>
            </value>
            <value>
                <fullName>Technology didn&apos;t meet needs</fullName>
            </value>
            <value>
                <fullName>Went Direct</fullName>
            </value>
            <value>
                <fullName>Account Restricted</fullName>
            </value>
            <value>
                <fullName>Legacy CMS Record</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Renewal with Change</fullName>
            </value>
            <value>
                <fullName>Amend Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>