force-app/main/default/objects/Opportunity/fields/CWS_Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lost_Reason_Detail__c</fullName>
    <inlineHelpText>Captures detail on the reason for losing this Opportunity.</inlineHelpText>
    <label>Lost Reason(s) Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>