force-app/main/default/objects/Opportunity/fields/CWS_Manage_Company_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Company_Login_ID__c</fullName>
    <description>Requested Manage Company Login ID (for install)</description>
    <inlineHelpText>Captures requested Manage Company Login ID (for install).</inlineHelpText>
    <label>Manage Company Login ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>