force-app/main/default/objects/Opportunity/fields/CWS_Manager_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manager_Full_Name__c</fullName>
    <formula>Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Full Name</label>
    <type>Text</type>
</CustomField>