force-app/main/default/objects/Opportunity/fields/CWS_Master__c.field-meta.xml
<CustomField>
    <fullName>CWS_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates that the opportunity will have the legacy model of minimum commitment maintained as $value at Account level. This is not recommended; please contact System Administrator for help.</inlineHelpText>
    <label>Master?</label>
    <type>Checkbox</type>
</CustomField>