force-app/main/default/objects/Opportunity/fields/CWS_Meddic_avg_num__c.field-meta.xml
<CustomField>
    <fullName>CWS_Meddic_avg_num__c</fullName>
    <formula>(CWS_DCnum__c + CWS_DPnum__c + CWS_EBnum__c + CWS_IDPainNum__c + CWS_MetNum__c + CWS_CHnum__c)/6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meddic avg num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>